--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -105,7 +105,7 @@
 		/* Initially hidden */
 	}
 
-	/* Apply this class to the overlay when needed */
+	/* Apply this class to overlay when needed */
 	.overlay.active {
 		display: block;
 	}
